chore: stop whitespace minification

--- a/assets/styles/modules.scss
+++ b/assets/styles/modules.scss
@@ -81,9 +81,11 @@ footer {
 	padding-bottom: 2rem;
 	font-size: 2rem;
 	font-weight: 700;
+	color: var(--front-colour-light);
 
 	h1 {
 		display: inline;
+		color: var(--front-colour);
 	}
 }
 
