--- a/assets/styles/reset.scss
+++ b/assets/styles/reset.scss
@@ -4,6 +4,7 @@
 
 	--bg-colour: #fbfaf7;
 	--front-colour: #363c41;
+	--front-colour-light: #8e98a2;
 	--accent: 240, 68%, 37%;
 	--thing: 35, 76%, 95%;
 
